# amd-smi-wrapper

./: .cspell.json  Cargo.toml  README.md  build.rs
.cspell/: project-words.txt
.github/workflows/: check_git.yaml  main.yaml
src/: bindings.rs  error.rs  handles.rs  lib.rs  metrics.rs  utils.rs
tests/: tests.rs
