[package]
name = "amd-smi-wrapper"
version = "0.2.0"
edition = "2024"

[features]
mock = ["dep:mockall"]

[dependencies]
libloading = "0.8"
thiserror = "2.0.14"
bitflags = "2"
mockall = { version = "0.14.0", optional = true }

[build-dependencies]
bindgen = "0.72.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
